[gd_scene load_steps=5 format=3 uid="uid://cqom6kxl3fsjd"]

[ext_resource type="Script" uid="uid://dldael4dda7js" path="res://source/GUI/upgrade_window/upgrade_window.gd" id="1_dt6j6"]
[ext_resource type="StyleBox" uid="uid://b1q0w0d2ul4lb" path="res://source/themes/normal_paper_background_pannel.tres" id="2_uoh4h"]
[ext_resource type="Texture2D" uid="uid://blvtsygsr6408" path="res://assets/tiny_swords/UI/Buttons/BUTTON_CLOSE_ON.png" id="3_uoh4h"]
[ext_resource type="Texture2D" uid="uid://c761oujpemvg6" path="res://assets/tiny_swords/UI/Buttons/BUTTON_CLOSE_OFF.png" id="4_c5db3"]

[node name="UpgradeWindow" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 253.0
offset_top = 206.0
offset_right = 1481.0
offset_bottom = 911.0
script = ExtResource("1_dt6j6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_uoh4h")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="UpgradesContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="CloseButton" type="TextureButton" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_uoh4h")
texture_pressed = ExtResource("4_c5db3")
